fix: change visibility rule

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -268,7 +268,6 @@ html, body {
   margin-right: 35px;
 }
 
-
 @media (max-width: 767px) {
 
   #app__map {
@@ -394,6 +393,7 @@ html, body {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    visibility: hidden;
   }
   body::before, body::after {
     position: absolute;
@@ -403,6 +403,7 @@ html, body {
     bottom: 0;
     width: 100%;
     height: 100%;
+    visibility: visible;
   }
   body::before {
     content: '';
